deployment/openshift/manifest/openshift-operator/apache-service.yaml
#Expose the apache web server as a Service
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache
