deployment/openshift/manifest/openshift-operator/apache-ingress-cpx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpx-ingress
spec:
  rules:
  - host: citrix-ingress-operator.com
    http:
      paths:
      - backend:
          service:
            name: apache
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
