deployment/openshift/manifest/openshift-operator/apache-ingress-vpx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vpx-ingress
  annotations:
   ingress.citrix.com/frontend-ip: "<NSVIP>"
spec:
  rules:
  - host: citrix-ingress-operator.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apache
          servicePort: 80
